--- a/index.html
+++ b/index.html
@@ -1,25 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Gabriel Albert P. Ollero - Resume</title>
-</head>
-<body>
-    <div class="nav-container">
-        <nav>
-            <img src="#" class="logo">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Education</a></li>
-                <li><a href="#">Experience</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>CIT18 - Resume</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="nav">
+        <img src="logo.png" class="logo" />
+        <ul>
+          <li><a href="#about">About Me</a></li>
+          <li><a href="#experience">Experiences</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#project">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
     </div>
-</body>
+    <section id="about">
+      <h1>ABOUT ME</h1>
+      <h2>GABRIEL ALBERT P. OLLERO</h2>
+      <p>
+        He is a freelancer and a web developer student currently enrolled in the
+        University of the Cordilleras in Baguio City, Philippines. He has a
+        Facebook page called Mustard Designs as he makes logos for people's
+        businesses and also help them decide on their brand design. He is very
+        patient, loyal, willing to learn, and always willing to move forward
+        with determination.
+      </p>
+    </section>
+    <section id="experience">
+      <div class="exp-h1">
+        <h1>EXPERIENCE</h1>
+      </div>
+      <div class="experience-container">
+        <ul>
+          <li>
+            <h3>Freelancing</h3>
+            <p>WFH | 2020 - 2023</p>
+            <p>Designing different logos for people's start-up businesses.</p>
+          </li>
+          <li>
+            <h3>Virtual Assistant | Graphic Designer</h3>
+            <p>WFH |2023 - 2024</p>
+            <p>Making Mascots for clients</p>
+            <p>Designing ad creatives for social media posts.</p>
+            <p>Video editing for Instagram posts.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section id="education">
+      <div class="educ-h1">
+        <h1>EDUCATION</h1>
+      </div>
+      <div class="education-container">
+        <ul>
+          <li>
+            <h3>Information Technology</h3>
+            <p>Saint Louis University | 2019 - 2020</p>
+            <p>Mary Heights, Bakakeng, Baguio City</p>
+          </li>
+
+          <li>
+            <h3>BSIT - Web Technology</h3>
+            <p>University of the Cordilleras | 2020 - 2024</p>
+            <p>Governor pack rd., Baguio City</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section id="skills">
+      <div class="skills-h1">
+        <h1>SKILLS</h1>
+      </div>
+      <div class="skills-container">
+        <p>HTML, CSS ,JS, and PHP</p>
+        <p>Determination</p>
+        <p>Multitasking</p>
+        <p>Critical Thinking</p>
+        <p>Active Listening</p>
+        <p>Communication Skills</p>
+      </div>
+    </section>
+  </body>
 </html>
