HTML & CSS FINSH

--- a/index.html
+++ b/index.html
@@ -86,5 +86,41 @@
         <p>Communication Skills</p>
       </div>
     </section>
-  </body>
+    <section id="projects">
+      <div class="skills-h1">
+          <h1>PROJECTS</h1>
+        </div>
+      <ul>
+          <li>
+              <h2>Mascots</h2>
+              <img src="img/bee.png" alt="buzz" class="bee">
+              <img src="img/fox.png" alt="woof" class="fox">
+              <img src="img/lama.png" alt="meh" class="llama">
+          </li>
+      </ul>
+      <ul>
+          <li>
+              <h2>Designs</h2>
+              <img src="img/6410.png" alt="6410" class="6410">
+              <img src="img/pebble.png" alt="pebble" class="cp">
+              <img src="img/sage.png" alt="sage" class="sage">
+              <img src="img/ink.png" alt="ink" class="ink">
+              <img src="img/vape.png" alt="vape" class="vape">
+              <img src="img/nt.png" alt="nt" class="nt">
+          </li>
+  </section>
+  <section id="contact">
+      <div class="contact-h1">
+          <h1>CONTACT</h1>
+      </div>
+      <div class="contact-container">
+      <p>Email: gpo4700@students.uc-bcf.edu.ph</p>
+      <p>Facebook: facebook.com/orpheuuuus</p>
+      <p>GitHub: github.com/bugsywap</p>
+      </div>
+  </section>
+  <footer>
+      <p>&copy; 2024 Gabriel Albert P. Ollero. CIT18.</p>
+  </footer>
+</body>
 </html>
