--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; 2024 Gabriel Albert P. Ollero. CIT18.</p>
+        <p>&copy; 2024 Gabriel Albert P. Ollero. CIT18 - Mastery in Web Technology.</p>
     </footer>
   </body>
 </html>
