changes in index

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
           <li>
             <h3>Freelancing</h3>
             <p>WFH | 2020 - 2023</p>
-            <p>Designing different logos for people's start-up businesses.</p>
+            <p>Designing different logos for people's start-up businesses</p>
           </li>
           <li>
             <h3>Virtual Assistant | Graphic Designer</h3>
             <p>WFH |2023 - 2024</p>
             <p>Making Mascots for clients</p>
-            <p>Designing ad creatives for social media posts.</p>
-            <p>Video editing for Instagram posts.</p>
+            <p>Designing ad creatives for social media posts</p>
+            <p>Video editing for Instagram posts</p>
           </li>
         </ul>
       </div>
