added skills section

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
         <h1>SKILLS</h1>
       </div>
       <div class="skills-container">
+        <p>Adobe Photoshop</p>
+        <p>Adobe Illustrator</p>
+        <p>Figma</p>
+        <p>Adobe After Effects</p>
+        <p>Google Workspace</p>
         <p>HTML, CSS ,JS, and PHP</p>
         <p>Determination</p>
         <p>Multitasking</p>
