Change of content

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
             <h1>CONTACT</h1>
         </div>
         <div class="contact-container">
-        <p>Email: gpo4700@students.uc-bcf.edu.ph</p>
+        <p>Email: ollerogabe@gmail.com</p>
+        <p>Phone: (+63)9472738133 </p>
         <p>Facebook: facebook.com/orpheuuuus</p>
-        <p>GitHub: github.com/bugsywap</p>
         <button><a href="https://drive-data-export.usercontent.google.com/download/882jcej8om6ab2hv
             qlmp4i7mhr79rd54/fqs3cntubnla6f023ofec2qov2s3dq6k/1705675500000/d9049116-0466-4041-8f12-
             0552d96c4680/105258382117354467645/ADt3v-PZVHB72e9lp3FWWz0QALcZ_3XJG7OMv1P1gYKlsVOIeJS9el
@@ -135,7 +135,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; 2024 Gabriel Albert P. Ollero. CIT18 - Mastery in Web Technology.</p>
+        <p>&copy; 2024 Gabriel Albert P. Ollero.</p>
     </footer>
   </body>
 </html>
