new image, and title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script defer src="script.js"></script>
-    <title>CIT18 - Resume</title>
+    <title>Ollero - Resume</title>
   </head>
   <body>
     <div class="container" id="navbar">
@@ -109,12 +109,12 @@
         <ul>
             <li>
                 <h2>Designs</h2>
-                <img src="img/6410.png" alt="6410" class="6410">
+                <img src="img/retro.png" alt="6410" class="retro">
                 <img src="img/pebble.png" alt="pebble" class="cp">
                 <img src="img/sage.png" alt="sage" class="sage">
                 <img src="img/ink.png" alt="ink" class="ink">
                 <img src="img/vape.png" alt="vape" class="vape">
-                <img src="img/nt.png" alt="nt" class="nt">
+                <img src="img/skull.png" alt="nt" class="skull">
             </li>
     </section>
     <section id="contact">
